refactor: clarify data
